# Class_DataScienceEX

./: NO1.ipynb  README.md  Rein-5.ipynb  pyproject.toml  レポート課題_2nd_高林秀.ipynb
src/class_datascienceex/: __init__.py
レポート用/: data_レポート用.csv  レポート課題_6th_高林秀.ipynb
最終課題用/: model.joblib  report-23vr008n.ipynb  report-23vr008n.pptx
最終課題用/2009-2010/: data.csv
最終課題用/2011-2012/: data.csv
最終課題用/2013-2014/: data.csv
最終課題用/2015-2016/: data.csv
最終課題用/2017-2018/: data.csv
最終課題用/2019-2021/: data.csv
最終課題用/2022-2023/: data.csv
