[project]
name = "class-datascienceex"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tsyu1234", email = "syukunt@gmail.com" }
]
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "matplotlib>=3.7.5",
    "scikit-learn>=1.3.2",
    "ipykernel>=6.29.4",
    "japanize_matplotlib>=1.1.3",
    "lxml>=5.2.1",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "class_datascienceex:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/class_datascienceex"]
